Fix tiny cropping in Firefox

--- a/src/elements/emby-radio/emby-radio.css
+++ b/src/elements/emby-radio/emby-radio.css
@@ -46,6 +46,7 @@
     top: 0;
     left: 0;
     z-index: 1;
+    overflow: visible;
 }
 
 .mdl-radio__button:disabled + .mdl-radio__circles {
